# drm-framebuffer

./: .gitignore  CMakeLists.txt  Makefile  README.md  framebuffer.c  framebuffer.h  main.c
.github/workflows/: automated-build.yml  release.yml  shared-static-multi-arch-build.yml
